--- a/CryptoApp/app/src/main/res/values/strings.xml
+++ b/CryptoApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CryptoApp</string>
+    <string name="price">0</string>
+    <string name="TAG">BTC</string>
+    <string name="name" />
 </resources>
